<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="fragmentRGBColorPicker_defaultRGBValue" translatable="false">0</string>
    <string name="defaultColorPalette">Default color palette</string>
    <string name="generic_ok">OK</string>
    <string name="generic_cancel">Cancel</string>
    <string name="generic_no_thanks">No, thanks</string>
    <string name="generic_warning">Warning</string>
    <string name="generic_saved">Saved</string>
    <string name="generic_switch">Switch</string>
    <string name="generic_darken_mode_tooltip">Darken mode</string>
    <string name="generic_lighten_mode_tooltip">Lighten mode</string>
    <string name="app_name" translatable="false">PixaPencil</string>
    <string name="generic_png" translatable="false">PNG</string>
    <string name="generic_jpg" translatable="false">JPG</string>
    <string name="generic_webp" translatable="false">WEBP</string>
    <string name="generic_tif" translatable="false">TIF</string>
    <string name="generic_bmp" translatable="false">BMP</string>
    <string name="fragmentAppInfo_placeholder_version_number" translatable="false">X.X.X</string>
    <string name="recentCreationsLayout_favoriteButton_content_description">Favorite</string>
    <string name="recentCreationsLayout_imageView_content_description">Pixel Art Preview</string>
    <string name="colorPalettesLayout_color_palette_item">Color Palette Item</string>
    <string name="activityMainBottomSheet_duplicate">Duplicate</string>
    <string name="activityMainBottomSheet_view_details">View Details</string>
    <string name="activityMainBottomSheet_delete">Delete</string>
    <string name="projectDetailsAlertBox_width">Width</string>
    <string name="projectDetailsAlertBox_height">Height</string>
    <string name="projectDetailsAlertBox_created">Created</string>
    <string name="projectDetailsAlertBox_colors">Colors</string>
    <string name="exportProjectDialogLayout_file_name_str">File Name</string>
    <string name="exportProjectDialogLayout_file_type_str">File Type</string>
    <string name="exportProjectDialogLayout_resolution_str">Resolution</string>
    <string name="exportProjectDialogLayout_raw_str">Raw</string>
    <string name="exportProjectDialogLayout_scaled_str">Scaled</string>
    <string name="compression_quality">Compression Quality</string>
    <string name="palette_url_identifier">Palette URL identifier</string>
    <string name="recentCreationsLayout_subtitle" translatable="false">%1$dx%2$d</string>
    <string name="fragmentFilters_color_filter">Color Filter</string>
    <string name="fragmentFilters_lighten">Lighten</string>
    <string name="fragmentFilters_darken">Darken</string>
    <string name="fragmentFilters_invert">Invert</string>
    <string name="fragmentFilters_grayscale">Grayscale</string>
    <string name="fragmentNewColorPalette_done">Done</string>
    <string name="fragmentNewColorPalette_extract_from_canvas">Extract From Canvas</string>
    <string name="fragmentNewColorPalette_color_palette_name">Color Palette Name</string>
    <string name="fragmentFindAndReplace_find">Find</string>
    <string name="fragmentFindAndReplace_replace_with">Replace with</string>
    <string name="fragmentFindAndReplace_colors_in_your_canvas">Colors in your canvas:</string>
    <string name="fragmentFindAndReplace_not_enough_colors">Not enough colors? Change your selected color palette.</string>
    <string name="fragmentSprayToolSettings_strength">Strength</string>
    <string name="fragmentSprayToolSettings_radius">Radius</string>
    <string name="fragmentSprayToolSettings_done">Done</string>
    <string name="fragmentNewProject_name">Name</string>
    <string name="fragmentNewProject_width">Width</string>
    <string name="fragmentNewProject_height">Height</string>
    <string name="fragment_find_and_replace_find_preview_content_description">Find Preview</string>
    <string name="fragment_find_and_replace_replace_preview_content_description">Replace Preview</string>
    <string name="fragment_new_project_title">New Project</string>
    <string name="fragment_replace_color_title">Replace Color</string>
    <string name="fragment_color_picker_title">Select Color</string>
    <string name="fragment_new_color_palette_title">New Color Palette</string>
    <string name="fragment_spray_tool_settings_title">Spray Tool Settings</string>
    <string name="fragment_dither_tool_settings_title">Dither Tool Settings</string>
    <string name="fragmentTools_pencil_tool_content_description">Pencil Tool</string>
    <string name="fragmentTools_eraser_tool_content_description">Eraser Tool</string>
    <string name="fragmentTools_move_tool_content_description">Move Tool</string>
    <string name="fragmentTools_color_picker_tool_content_description">Color Picker Tool</string>
    <string name="fragmentTools_fill_tool_content_description">Fill Tool</string>
    <string name="fragmentTools_line_tool_content_description">Line Tool</string>
    <string name="fragmentTools_rectangle_tool_content_description">Rectangle Tool</string>
    <string name="fragmentTools_outlined_rectangle_tool_content_description">Outlined Rectangle Tool</string>
    <string name="fragmentTools_square_tool_content_description">Square Tool</string>
    <string name="fragmentTools_outlined_square_button_content_description">Outlined Square Tool</string>
    <string name="fragmentTools_ellipse_tool_content_description">Ellipse Tool</string>
    <string name="fragmentTools_outlined_ellipse_button_content_description">Outlined Ellipse Tool</string>
    <string name="fragmentTools_circle_tool_content_description">Circle Tool</string>
    <string name="fragmentTools_outlined_circle_tool_content_description">Outlined Circle Tool</string>
    <string name="fragmentTools_spray_tool_content_description">Spray Tool</string>
    <string name="fragmentTools_polygon_tool_content_description">Polygon Tool</string>
    <string name="fragmentTools_dither_tool_content_description">Dither Tool</string>
    <string name="fragmentTools_shading_tool_content_description">Shading Tool</string>
    <string name="fragmentHexadecimalColorPicker_hexadecimal_value">Hexadecimal value</string>
    <string name="fragmentHexadecimalColorPicker_successfully_copied_to_clipboard">Successfully copied to clipboard</string>
    <string name="fragmentHexadecimalColorPicker_failed_to_copy_to_clipboard">Failed to copy text clipboard</string>
    <string name="fragmentColorPicker_tab_color_picker">Color Picker</string>
    <string name="fragmentColorPicker_tab_rgb" translatable="false">RGB</string>
    <string name="fragmentColorPicker_tab_hex" translatable="false">Hex</string>
    <string name="fragmentAppInfo_created_by_text">Created by <a href="https://github.com/therealbluepandabear">thebluepandabear</a>.</string>
    <string name="fragmentAppInfo_community_text">Join the official
         <a href="https://discord.com/invite/cYtaTnuweW">Discord</a> server.
    </string>
    <string name="fragmentAppInfo_description_text">
        PixaPencil is an <a href="https://github.com/tomdoeslinux/PixaPencil">open source</a> pixel art editor, 100% free of privacy-intrusive Google Play services and annoying advertisements. \n\n To ensure this, it is recommended you\ninstall the app via <a href="https://f-droid.org/en/packages/com.therealbluepandabear.pixapencil/">F-Droid</a> or <a href="https://github.com/therealbluepandabear/PixaPencil/releases/latest">GitHub</a>.
    </string>
    <string name="fragmentAppInfo_description_text_land">PixaPencil is an <a href="https://github.com/tomdoeslinux/PixaPencil">open source</a> pixel art editor, 100% free of privacy-intrusive Google Play services and annoying advertisements. \n\nTo ensure this, it is recommended you\ninstall the app via <a href="https://f-droid.org/en/packages/com.therealbluepandabear.pixapencil/">F-Droid</a> or <a href="https://github.com/therealbluepandabear/PixaPencil/releases/latest">GitHub</a>.</string>
    <string name="activityMain_newProjectButton_contentDescription">New Project</string>
    <string name="activityCanvas_tab_brushes">Brushes</string>
    <string name="activityCanvas_tab_filters">Filters</string>
    <string name="activityCanvas_tab_tools">Tools</string>
    <string name="activityCanvas_tab_color_palettes">Palettes</string>
    <string name="activityMainTopAppMenu_dark_light_mode">Dark/Light Mode</string>
    <string name="activityMainTopAppMenu_about">About</string>
    <string name="activityMainTopAppMenu_delete_all">Delete All</string>
    <string name="activityMainTopAppMenu_open_image">Open Image</string>
    <string name="activityCanvasTopAppMenu_undo">Undo</string>
    <string name="activityCanvasTopAppMenu_redo">Redo</string>
    <string name="activityCanvasTopAppMenu_import_lospec_palette">Import Lospec Palette</string>
    <string name="activityCanvasTopAppMenu_new_color_palette">New Color Palette</string>
    <string name="activityCanvasTopAppMenu_pixel_perfect">Pixel Perfect</string>
    <string name="activityCanvasTopAppMenu_rotate">Rotate</string>
    <string name="activityCanvasTopAppMenu_rotate_90_clockwise">90° (clockwise)</string>
    <string name="activityCanvasTopAppMenu_rotate_90_anti_clockwise">90° (anti-clockwise)</string>
    <string name="activityCanvasTopAppMenu_rotate_180">180°</string>
    <string name="activityCanvasTopAppMenu_flip">Flip</string>
    <string name="activityCanvasTopAppMenu_reset_zoom">Reset Zoom</string>
    <string name="activityCanvasTopAppMenu_reset_position">Reset Position</string>
    <string name="activityCanvasTopAppMenu_zoom_in">Zoom in</string>
    <string name="activityCanvasTopAppMenu_zoom_out">Zoom out</string>
    <string name="activityCanvasTopAppMenu_save_text">Save</string>
    <string name="activityCanvasTopAppMenu_grid">Grid</string>
    <string name="activityCanvasTopAppMenu_replace_color">Replace Color</string>
    <string name="activityCanvasTopAppMenu_clear_canvas">Clear Canvas</string>
    <string name="activityCanvasTopAppMenu_symmetry_horizontal">Horizontal</string>
    <string name="activityCanvasTopAppMenu_symmetry_vertical">Vertical</string>
    <string name="activityCanvasTopAppMenu_symmetry_quad">Quad</string>
    <string name="activityCanvasTopAppMenu_symmetry">Symmetry</string>
    <string name="activityCanvasTopAppMenu_symmetry_none">None</string>
    <string name="activityCanvasTopAppMenu_symmetry_octal">Octal</string>
    <string name="activityCanvasTopAppMenu_save_in_background">Save in Background</string>
    <string name="activityCanvasTopAppMenu_export">Export</string>
    <string name="bottomNavigationMenu_starred">Starred</string>
    <string name="bottomNavigationMenu_home">Home</string>
    <string name="pencil_tool_info_title">Pencil Tool Info</string>
    <string name="pencil_tool_info_text">Draw freehand, pixelated paths</string>
    <string name="erase_tool_info_title">Erase Tool Info</string>
    <string name="erase_tool_info_text">Erase pixels</string>
    <string name="move_tool_info_title">Move Tool Info</string>
    <string name="move_tool_info_text">Move around the canvas by holding your finger on the screen and dragging</string>
    <string name="color_picker_tool_info_title">Color Picker Tool Info</string>
    <string name="color_picker_tool_info_text">Get the color at the specified pixel</string>
    <string name="fill_tool_info_title">Fill Tool Info</string>
    <string name="fill_tool_info_text">Fill adjacent pixels which are similar in color value</string>
    <string name="line_tool_info_title">Line Tool Info</string>
    <string name="line_tool_info_text">Draw pixelated lines</string>
    <string name="rectangle_tool_info_title">Rectangle Tool Info</string>
    <string name="rectangle_tool_info_text">Draw filled, pixelated rectangles</string>
    <string name="logo_cdesc">Logo</string>
</resources>