<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/exportProjectDialogLayout_fileNameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/exportProjectDialogLayout_file_name_str"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/exportProjectDialogLayout_fileNameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/exportProjectDialogLayout_file_type_str"
        app:layout_constraintStart_toStartOf="@+id/exportProjectDialogLayout_fileNameTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/exportProjectDialogLayout_fileNameTextInputLayout" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="@+id/exportProjectDialogLayout_fileNameTextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/exportProjectDialogLayout_fileNameTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioGroup
            android:id="@+id/exportProjectDialogLayout_radioGroup_fileType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/exportProjectDialogLayout_radioButton_PNG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="90dp"
                android:background="@drawable/radiobuttonselector"
                android:button="@android:color/transparent"
                android:textColor="@drawable/radiobuttontextselector"
                android:text="@string/generic_png"
                android:checked="true"
                android:textStyle="bold"
                android:textAlignment="center" />

            <RadioButton
                android:id="@+id/exportProjectDialogLayout_radioButton_JPG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="90dp"
                android:background="@drawable/radiobuttonselector"
                android:textColor="@drawable/radiobuttontextselector"
                android:button="@android:color/transparent"
                android:text="@string/generic_jpg"
                android:textStyle="bold"
                android:textAlignment="center" />

            <RadioButton
                android:id="@+id/exportProjectDialogLayout_radioButton_WEBP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="90dp"
                android:background="@drawable/radiobuttonselector"
                android:button="@android:color/transparent"
                android:textColor="@drawable/radiobuttontextselector"
                android:text="@string/generic_webp"
                android:textStyle="bold"
                android:textAlignment="center" />

            <RadioButton
                android:id="@+id/exportProjectDialogLayout_radioButton_TIF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="90dp"
                android:background="@drawable/radiobuttonselector"
                android:button="@android:color/transparent"
                android:textColor="@drawable/radiobuttontextselector"
                android:text="@string/generic_tif"
                android:textStyle="bold"
                android:textAlignment="center" />

            <RadioButton
                android:id="@+id/exportProjectDialogLayout_radioButton_BMP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="90dp"
                android:background="@drawable/radiobuttonselectorlast"
                android:button="@android:color/transparent"
                android:textColor="@drawable/radiobuttontextselector"
                android:text="@string/generic_bmp"
                android:textStyle="bold"
                android:textAlignment="center" />
        </RadioGroup>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/exportProjectDialogLayout_resolution_str"
        app:layout_constraintStart_toStartOf="@+id/exportProjectDialogLayout_fileNameTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <RadioGroup
        android:id="@+id/exportProjectDialogLayout_radioGroup_resolutionType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/exportProjectDialogLayout_fileNameTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/exportProjectDialogLayout_radioButton_Raw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="90dp"
            android:background="@drawable/radiobuttonselector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:text="@string/exportProjectDialogLayout_raw_str"
            android:textAlignment="center"
            android:textColor="@drawable/radiobuttontextselector"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/exportProjectDialogLayout_radioButton_Scaled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="90dp"
            android:background="@drawable/radiobuttonselectorlast"
            android:button="@android:color/transparent"
            android:text="@string/exportProjectDialogLayout_scaled_str"
            android:textAlignment="center"
            android:textColor="@drawable/radiobuttontextselector"
            android:textStyle="bold" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragmentNewCanvas_compressionQualityTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:hint="Compression Quality"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/exportProjectDialogLayout_fileNameTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exportProjectDialogLayout_radioGroup_resolutionType">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragmentNewCanvas_compressionQualityTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>